# wiggles

./: .gitignore  Cargo.toml  README.md  manifesto.mnfsto  setup.py
console/: Cargo.toml
console/src/: main.rs
console_server/: Cargo.toml
console_server/src/: clients.rs  lib.rs  reactor.rs  show_library.rs  socket_server.rs
control_bundle/: Cargo.toml
core_console_test/: Cargo.toml
core_console_test/src/: main.rs
dataflow/: Cargo.toml
dataflow/src/: clock.rs  lib.rs  network.rs  util.rs
dataflow/src/clock_network/: test.rs
dataflow/src/clocks/: basic.rs  clock.rs  mod.rs  multiplier.rs  serde.rs  simple.rs  triggered.rs
dataflow/src/network/: mod.rs  test.rs
dataflow/src/test/: mod.rs  test_clock_network.rs  test_wiggle_network.rs
dataflow/src/wiggles/: blender.rs  fanner.rs  mod.rs  serde.rs  trial.rs  wiggle.rs
dataflow_message/: Cargo.toml
dataflow_message/src/: clock.rs  lib.rs  wiggle.rs
dataflow_old/: Cargo.toml
dataflow_old/src/: lib.rs  master.rs  network.rs
dataflow_old/src/data_network/: mod.rs
event-loop/: Cargo.toml
event-loop/src/: lib.rs
event_loop/: Cargo.toml
event_loop/src/: lib.rs
fixture-patch/: Cargo.toml
fixture-patch/src/: fixture.rs  lib.rs  profiles.rs  test.rs
fixture_patch/: Cargo.toml
fixture_patch/src/: fixture.rs  lib.rs  profiles.rs  test.rs
fixture_patch_message/: Cargo.toml
fixture_patch_message/src/: lib.rs
knob_message/: Cargo.toml
src/: basic_clock.rs  clock.rs  clock_network.rs  dataflow.rs  datatypes.rs  event.rs  interconnect.rs  knob.rs  lib.rs  master.rs  network.rs  update.rs  utils.rs
src/clock_network/: mod.rs  node_prototype.rs  test.rs
src/clocks/: basic.rs  mod.rs  multiplier.rs  test.rs  triggered.rs
src/data_network/: data.rs  mod.rs
view/: .gitignore  WigglesView.sln  package.json
view/public/: App.js  EditBox.js  Modal.js  Navbar.js  NewPatch.js  PatchEdit.js  Patcher.js  Socket.js  Types.js  WigglesBase.js  bundle.js  index.html
view/public/core/: Base.js  Bootstrap.js  ClockTypes.js  Clocks.js  DataflowTypes.js  EditBox.js  Knob.js  Knobs.js  LoadShow.js  Modal.js  Navbar.js  NewShow.js  RenameShow.js  SaveShowAs.js  SimpleEditor.js  Slider.js  Socket.js  Table.js  Types.js  Util.js  UtilPages.js  WiggleTypes.js  Wiggles.js
view/public/fable-react-toolbox/: Fable.Helpers.ReactToolbox.js
view/public/patcher/: Controls.js  NewPatch.js  PatchEdit.js  PatchTypes.js  Patcher.js  Universes.js
view/src/: App.fsx  Bootstrap.fsx  CoreTest.fsx  Modal.fsx  Navbar.fsx  NewPatch.fsx  PatchEdit.fsx  Patcher.fsx  Socket.fsx  Types.fsx  Util.fsx  WigglesBase.fsx
view/src/core/: Base.fsx  Bootstrap.fsx  Chart.fsx  ClockTypes.fsx  Clocks.fsx  DataflowTypes.fsx  EditBox.fsx  Knob.fsx  Knobs.fsx  LoadShow.fsx  Modal.fsx  Navbar.fsx  NewShow.fsx  RenameShow.fsx  SaveShowAs.fsx  SimpleEditor.fsx  Slider.fsx  Socket.fsx  Table.fsx  Types.fsx  Util.fsx  UtilPages.fsx  WiggleTypes.fsx  Wiggles.fsx
view/src/patcher/: Controls.fsx  NewPatch.fsx  PatchEdit.fsx  PatchTypes.fsx  Patcher.fsx  Universes.fsx
waveforms/: Cargo.toml
waveforms/src/: lib.rs
websocket_server/: Cargo.toml
websocket_server/src/: main.rs
wiggles/: Cargo.toml  clocks.py  module_example.py  singleton.py
wiggles-control/: Cargo.toml
wiggles-value/: Cargo.toml
wiggles-value/src/: lib.rs
wiggles-view/: .gitignore  WigglesView.sln  fableconfig.json  package.json  webpack.config.js
wiggles-view/public/: Bootstrap.js  EditBox.js  Modal.js  NewPatch.js  PatchEdit.js  Types.js  Util.js  index.html
wiggles-view/public/src/: App.js  Bootstrap.js  EditBox.js  NewPatch.js  PatchEdit.js  Types.js  Util.js
wiggles-view/src/: App.fsx  Bootstrap.fsx  EditBox.fsx  Modal.fsx  NewPatch.fsx  PatchEdit.fsx  Types.fs  Types.fsx  Util.fsx
wiggles/src/: datatypes.rs  interconnect.rs  knob.rs  lib.rs  utils.rs
wiggles/src/clock_network/: mod.rs
wiggles/test/: isclose.py  test_clocks.py  test_module_example.py
wiggles_value/: Cargo.toml
wiggles_value/src/: blend.rs  knob.rs  knob_types.rs  lib.rs
(+2 files in other folders)
