[package]
name = "console_server"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]

[dependencies]
event_loop = { path = "../event_loop" }
smallvec = "*"
serde = "*"
log = "*"
bincode = "*"
serde_json = "*"
chrono = "*"

[dev-dependencies]
simple_logger = "*"
serde_derive = "*"
rand = "*"