[package]
name = "core_console_test"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]

[dependencies]
console_server = { path = "../console_server" }
fixture_patch = { path = "../fixture_patch" }
fixture_patch_message = { path = "../fixture_patch_message" }
serde = "*"
serde_derive = "*"
log = "*"
simple_logger = "*"
rust_dmx = { git = "https://github.com/generalelectrix/rust-dmx" }