[package]
name = "dataflow"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]

[dependencies]
wiggles_value = { path = "../wiggles_value" }
# this is only here to import the Messages type, should probably refactor.
console_server = { path = "../console_server" }
waveforms = { path = "../waveforms" }
ordermap = "*"
log = "*"
serde = "*"
serde_derive = "*"
lazy_static = "*"
serde_json = "*"

[dev-dependencies]
simple_logger = "*"