[package]
name = "fixture_patch_message"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]

[dependencies]
rust_dmx = { git = "https://github.com/generalelectrix/rust-dmx" }
fixture_patch = { path = "../fixture_patch" }
console_server = { path = "../console_server" }
wiggles_value = { path = "../wiggles_value" }
serde = "*"
serde_derive = "*"